# tabi_ui

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: tailwind.css
src/: lib.rs  macros.rs
src/components/: badge.rs  button.rs  mod.rs  progress_indicator.rs  spinner.rs
src/components/container/: card.rs  mod.rs
src/components/container/dialog/: mod.rs
src/components/dialog/: message_dialog.rs  mod.rs  text_input_dialog.rs
src/components/input/: mod.rs  slider.rs  switch.rs  text_input.rs  textarea.rs  toggle.rs
src/components/input/select/: context.rs  list.rs  mod.rs  none_option.rs  option.rs  trigger.rs  value.rs
src/components/layout/: mod.rs  portal.rs  scroll_area.rs  scroll_host.rs
src/components/navigation/: breadcrumb.rs  mod.rs
src/hooks/: mod.rs  use_controlled.rs  use_effect_cleanup.rs  use_modal_offset.rs  use_unique_id.rs  use_window_size.rs
src/utils/: mod.rs
