[package]
name = "tabi_ui"
version = "0.1.0"
edition = "2024"
description = "Reusable Dioxus components"
repository = "https://github.com/falineth/tabi_ui"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.5", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
nanoid = { version = "0.5.0", optional = true }
nanoid-wasm = { version = "0.1.3", features = ["wasm"], optional = true }
web-sys = { version = "0.3.85", features = ["Storage"], optional = true }

[features]
desktop = ["dioxus/desktop", "dep:nanoid"]
web = ["dioxus/web", "dep:nanoid-wasm", "dep:web-sys"]
